# C-NN

./: .gitignore  CMakeLists.txt  Dockerfile  MNIST_CONV.c  MNIST_DENSE.c  Makefile  README.md  array.c  array.h  data.c  data.h  layers.c  layers.h  macros.h  net.c  net.h  tensor.c  tensor.h
src/: MNIST_DENSE.cù  array.c  array.h  data.c  data.h  layers.c  layers.h  macros.h  net.c  net.h  tensor.c  tensor.h
src/test/: MNIST_CONV.c  MNIST_DENSE_debug.c  conv2d_test.c  debug_net.c  pgm.c  pgm.h
